Feat formatting_video.py and fileserver_client.py
